prevent ugly wrap

--- a/src/view/adminhtml/web/css/configuration.css
+++ b/src/view/adminhtml/web/css/configuration.css
@@ -3,5 +3,5 @@
     background-position: 4px center !important;
     background-repeat: no-repeat !important;
     background-size: 24px 24px !important;
-    text-indent: 24px;
+    padding-left: 32px;
 }
